--- a/platforms/windows/projects/MinecraftClient.Win32/MinecraftClient.Win32.vcxproj.filters
+++ b/platforms/windows/projects/MinecraftClient.Win32/MinecraftClient.Win32.vcxproj.filters
@@ -18,31 +18,31 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\AppPlatform_win32.hpp">
+    <ClInclude Include="$(MC_ROOT)\platforms\windows\AppPlatform_win32.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\LoggerWin32.hpp">
+    <ClInclude Include="$(MC_ROOT)\platforms\windows\LoggerWin32.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\SoundSystemDS.hpp">
+    <ClInclude Include="$(MC_ROOT)\platforms\windows\SoundSystemDS.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\AppPlatform_win32.cpp">
+    <ClCompile Include="$(MC_ROOT)\thirdparty\stb_image_impl.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\LoggerWin32.cpp">
+    <ClCompile Include="$(MC_ROOT)\platforms\windows\AppPlatform_win32.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\main.cpp">
+    <ClCompile Include="$(MC_ROOT)\platforms\windows\LoggerWin32.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\SoundSystemDS.cpp">
+    <ClCompile Include="$(MC_ROOT)\platforms\windows\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\thirdparty\stb_image_impl.c">
-      <Filter>Source Files\Compatibility</Filter>
+    <ClCompile Include="$(MC_ROOT)\platforms\windows\SoundSystemDS.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
