--- a/platforms/windows/projects/Renderer/Renderer.vcxproj.filters
+++ b/platforms/windows/projects/Renderer/Renderer.vcxproj.filters
@@ -11,12 +11,12 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\source\renderer\GL\GL.cpp">
+    <ClCompile Include="$(MC_ROOT)\source\renderer\GL\GL.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\..\source\renderer\GL\GL.hpp">
+    <ClInclude Include="$(MC_ROOT)\source\renderer\GL\GL.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
